experiment complete - move to server side

--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 
   <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="blog.css">
 
 
   <script type='text/javascript' src='require.js'></script>
@@ -25,9 +26,6 @@
 
 </header>
 <section class='main'>
- <article>
-
- </article>
 </section>
 <footer>
 
